# sclang_format2

./: .gitmodules
sclang_format/: Cargo.toml  build.rs
sclang_format/.cargo/: config.toml
sclang_format/src/: doc.rs  engine.rs  format.rs  grammar.rs  lib.rs  main.rs
sclang_format/src/engine/: ast.rs
sclang_format/src/rules/: arg_to_pipe.rs  assignment.rs  ast_indent.rs  binary_ops.rs  block_brace.rs  block_layout.rs  brace_pipes.rs  call_index_paren.rs  colons.rs  comma.rs  compact_collections.rs  compact_if_trailing.rs  dot.rs  dot_chain_layout.rs  events_multiline.rs  expand_if_trailing.rs  extra_trailing_closures.rs  indent_style.rs  inline_comment_spacing.rs  inline_ws.rs  keyword_paren.rs  mod.rs  multiline_arrays.rs  no_final_semicolon.rs  parens_brackets.rs  pipe_body.rs  pipe_heads.rs  pipe_param_commas.rs  pipe_param_default_parens.rs  pipe_param_layout.rs  semicolon.rs  trailing_closures.rs  trailing_ws.rs  var_arg.rs
sclang_format/tests/: fixtures_insta.rs  rule_assignment.rs  rule_brace_and_pipes_single_line.rs  rule_comma.rs  rule_no_space_before_semicolons.rs  rule_no_spaces_around_dot.rs  rule_operator_spacing.rs  rule_semicolon.rs  rule_spaces_after_commas_not_before.rs  rule_trailing_whitespace.rs
sclang_format/tests/common/: mod.rs
sclang_format/tests/snapshots/: fixtures_insta__add_missing_commas__inline@out.snap  fixtures_insta__allman_to_kr__inline@out.snap  fixtures_insta__allman_to_kr__inline@out.snap.new  fixtures_insta__arg_to_pipe_params__inline@out.snap  fixtures_insta__assignments_in_pipes__inline@out.snap  (+35 more)
(+36 files in other folders)
