[package]
name = "sclang_format"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tree-sitter = "0.25"
owo-colors = "4"
ropey = "1.6.1"
pretty_assertions = "1.4.1"
glob = "0.3.3"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
glob = "0.3"
pretty_assertions = "1.4"
insta = "1.39"

[build-dependencies]
cc = "1"

[features]
debug-tree = []
